--- a/static/src/blocks/composite/main-header/main-header.scss
+++ b/static/src/blocks/composite/main-header/main-header.scss
@@ -70,6 +70,10 @@
       order: 3;
       width: 200px;
       margin-bottom: 0;
+
+      h4, h6 {
+        text-align: right;
+      }
     }
   }
   
