--- a/static/src/blocks/composite/main-nav/main-nav.scss
+++ b/static/src/blocks/composite/main-nav/main-nav.scss
@@ -1,7 +1,7 @@
 .main-nav {
   background: #fff;
   display: none;
-  overflow: scroll;
+  overflow: auto;
   padding-top: 20px;
   padding-bottom: 20px;
 
@@ -36,7 +36,7 @@
   &__link {
     display: block;
     margin: 5px auto 0;
-    
+
     &_active {
       text-decoration: none;
       color: #00c08c;
@@ -64,7 +64,7 @@
       height: 100px;
     }
   }
-  
+
   &__item:hover &__image {
     box-shadow: inset 0 0 20px rgba(255, 52, 104, 0.5);
     opacity: 1;
