--- a/static/src/css/base.scss
+++ b/static/src/css/base.scss
@@ -1,523 +1,5 @@
 /* Old styles */
 
-/*nivo-slider/nivo-slider.css*/
-.nivo-box, .nivo-caption, .nivoSlider {
-  overflow: hidden
-}
-
-.nivoSlider {
-  position: relative;
-  height: auto;
-  border: 2px solid #ff3468;
-  box-sizing: border-box;
-  margin: 0;
-  max-height: 300px;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-.nivoSlider-inited {
-  opacity: 1;
-}
-
-.nivoSlider img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  max-width: none
-}
-
-.nivo-main-image {
-  display: block !important;
-  position: relative !important;
-  width: 100% !important
-}
-
-.nivoSlider a.nivo-imageLink {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
-  padding: 0;
-  margin: 0;
-  z-index: 6;
-  display: none;
-  background: #fff;
-  filter: alpha(opacity=0);
-  opacity: 0
-}
-
-.nivo-box, .nivo-slice {
-  position: absolute;
-  display: block;
-  z-index: 5
-}
-
-.nivo-slice {
-  height: 100%;
-  top: 0
-}
-
-.nivo-box img {
-  display: block
-}
-
-.nivo-caption {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background: #000;
-  color: #fff;
-  width: 100%;
-  z-index: 8;
-  padding: 5px 10px;
-  opacity: .8;
-  display: none;
-  -moz-opacity: .8;
-  filter: alpha(opacity=8);
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box
-}
-
-.nivo-caption p {
-  padding: 5px;
-  margin: 0
-}
-
-.nivo-caption a {
-  display: inline !important
-}
-
-.nivo-html-caption {
-  display: none
-}
-
-.nivo-directionNav a {
-  position: absolute;
-  top: 45%;
-  z-index: 9;
-  cursor: pointer
-}
-
-.nivo-prevNav {
-  left: 0
-}
-
-.nivo-nextNav {
-  right: 0
-}
-
-.nivo-controlNav {
-  text-align: center;
-  padding: 5px 0 !important
-}
-
-.nivo-controlNav a {
-  cursor: pointer
-}
-
-.nivo-controlNav a.active {
-  font-weight: 700;
-}
-
-/*nivo-slider/themes/default/default.css*/
-.theme-default .nivoSlider {
-  position: relative;
-  background: url(../img/loading.gif) 50% 50% no-repeat #fff;
-  box-shadow: 0 1px 5px 0 #4a4a4a
-}
-
-.theme-default .nivoSlider img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: none
-}
-
-.theme-default .nivoSlider a {
-  border: 0;
-  display: block
-}
-
-.theme-default .nivo-controlNav {
-  text-align: center;
-  padding: 20px 0
-}
-
-.theme-default .nivo-controlNav a {
-  display: inline-block;
-  width: 22px;
-  height: 22px;
-  background: url(../img/bullets.png) no-repeat;
-  text-indent: -9999px;
-  border: 0;
-  margin: 0 2px
-}
-
-.theme-default .nivo-controlNav a.active {
-  background-position: 0 -22px
-}
-
-.theme-default .nivo-directionNav a {
-  display: block;
-  width: 50px;
-  height: 100%;
-  background: url(../img/arrows.png) no-repeat 0 50%;
-  text-indent: -9999px;
-  border: 0;
-  opacity: 0.6;
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-  top: 0;
-  background-position-y: 50%;
-  background-position-x: 18px
-}
-
-.theme-default:hover .nivo-directionNav a {
-  opacity: .6
-}
-
-.theme-default a.nivo-nextNav {
-  background: transparent url(../img/arrows.png) no-repeat scroll 275% 50%;
-  right: 0
-}
-
-.theme-default a.nivo-nextNav:hover, .theme-default a.nivo-prevNav:hover {
-  opacity: 1
-}
-
-.theme-default a.nivo-prevNav {
-  left: 0;
-  background: transparent url(../img/arrows.png) no-repeat scroll -185% 50%;
-}
-
-.theme-default .nivo-caption {
-  font-family: Helvetica, Arial, sans-serif
-}
-
-.theme-default .nivo-caption a {
-  color: #fff;
-  border-bottom: 1px dotted #fff
-}
-
-.theme-default .nivo-caption a:hover {
-  color: #fff
-}
-
-.theme-default .nivo-controlNav.nivo-thumbs-enabled {
-  width: 100%
-}
-
-.theme-default .nivo-controlNav.nivo-thumbs-enabled a {
-  width: auto;
-  height: auto;
-  background: 0 0;
-  margin-bottom: 5px
-}
-
-.theme-default .nivo-controlNav.nivo-thumbs-enabled img {
-  display: block;
-  width: 120px;
-  height: auto
-}
-
-/*fancybox*/
-.fancybox-image, .fancybox-inner, .fancybox-nav, .fancybox-nav span, .fancybox-outer, .fancybox-skin, .fancybox-tmp, .fancybox-wrap, .fancybox-wrap iframe, .fancybox-wrap object {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  outline: 0;
-  vertical-align: top
-}
-
-.fancybox-wrap {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 8020
-}
-
-.fancybox-skin {
-  position: relative;
-  background: #f9f9f9;
-  color: #444;
-  text-shadow: none;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px
-}
-
-.fancybox-opened {
-  z-index: 8030
-}
-
-.fancybox-opened .fancybox-skin {
-  -webkit-box-shadow: 0 10px 25px rgba(0, 0, 0, .5);
-  -moz-box-shadow: 0 10px 25px rgba(0, 0, 0, .5);
-  box-shadow: 0 10px 25px rgba(0, 0, 0, .5)
-}
-
-.fancybox-inner, .fancybox-outer {
-  position: relative
-}
-
-.fancybox-inner {
-  overflow: hidden
-}
-
-.fancybox-type-iframe .fancybox-inner {
-  -webkit-overflow-scrolling: touch
-}
-
-.fancybox-error {
-  color: #444;
-  font: 14px/20px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-  padding: 15px;
-  white-space: nowrap
-}
-
-.fancybox-iframe, .fancybox-image {
-  display: block;
-  width: 100%;
-  height: 100%
-}
-
-.fancybox-image {
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%
-}
-
-#fancybox-loading, .fancybox-close, .fancybox-next span, .fancybox-prev span {
-  background-image: url(../img/fancybox/fancybox_sprite.png)
-}
-
-#fancybox-loading {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -22px;
-  margin-left: -22px;
-  background-position: 0 -108px;
-  opacity: .8;
-  cursor: pointer;
-  z-index: 8060
-}
-
-#fancybox-loading div {
-  width: 44px;
-  height: 44px;
-  background: url(../img/fancybox/fancybox_loading.gif) center center no-repeat
-}
-
-.fancybox-close {
-  position: absolute;
-  top: -18px;
-  right: -18px;
-  width: 36px;
-  height: 36px;
-  cursor: pointer;
-  z-index: 8040
-}
-
-.fancybox-nav {
-  position: absolute;
-  top: 0;
-  width: 15%;
-  height: 85%;
-  cursor: pointer;
-  text-decoration: none;
-  background: transparent url(../img/fancybox/blank.gif);
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  z-index: 8040
-}
-
-.fancybox-prev {
-  left: 0
-}
-
-.fancybox-next {
-  right: 0
-}
-
-.fancybox-nav span {
-  position: absolute;
-  top: 50%;
-  width: 36px;
-  height: 34px;
-  margin-top: -18px;
-  cursor: pointer;
-  z-index: 8040;
-  visibility: hidden
-}
-
-.fancybox-prev span {
-  left: 10px;
-  background-position: 0 -36px
-}
-
-.fancybox-next span {
-  right: 10px;
-  background-position: 0 -72px
-}
-
-.fancybox-nav:hover span {
-  visibility: visible
-}
-
-.fancybox-tmp {
-  position: absolute;
-  top: -99999px;
-  left: -99999px;
-  visibility: hidden;
-  max-width: 99999px;
-  max-height: 99999px;
-  overflow: visible !important
-}
-
-.fancybox-lock {
-}
-
-.fancybox-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  display: none;
-  z-index: 8010;
-  background: url(../img/fancybox/fancybox_overlay.png)
-}
-
-.fancybox-overlay-fixed {
-  position: fixed;
-  bottom: 0;
-  right: 0
-}
-
-.fancybox-lock .fancybox-overlay {
-  overflow: auto;
-  overflow-y: auto
-}
-
-.fancybox-title {
-  visibility: hidden;
-  font: 400 13px/20px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  position: relative;
-  text-shadow: none;
-  z-index: 8050
-}
-
-.fancybox-opened .fancybox-title {
-  visibility: visible
-}
-
-.fancybox-title-float-wrap {
-  position: absolute;
-  bottom: 0;
-  right: 50%;
-  margin-bottom: -35px;
-  z-index: 8050;
-  text-align: center
-}
-
-.fancybox-title-float-wrap .child {
-  display: inline-block;
-  margin-right: -100%;
-  padding: 2px 20px;
-  background: 0 0;
-  background: rgba(0, 0, 0, .8);
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  border-radius: 15px;
-  text-shadow: 0 1px 2px #222;
-  color: #FFF;
-  font-weight: 700;
-  line-height: 24px;
-  white-space: nowrap
-}
-
-.fancybox-title-outside-wrap {
-  position: relative;
-  margin-top: 10px;
-  color: #fff
-}
-
-.fancybox-title-inside-wrap {
-  padding-top: 10px
-}
-
-.fancybox-title-over-wrap {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  color: #fff;
-  padding: 10px;
-  background: #000;
-  background: rgba(0, 0, 0, .8);
-}
-
-/* fancybox thumbs*/
-#fancybox-thumbs {
-  position: fixed;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  z-index: 8050
-}
-
-#fancybox-thumbs.bottom {
-  bottom: 2px
-}
-
-#fancybox-thumbs.top {
-  top: 2px
-}
-
-#fancybox-thumbs ul {
-  position: relative;
-  list-style: none;
-  margin: 0;
-  padding: 0
-}
-
-#fancybox-thumbs ul li {
-  float: left;
-  padding: 1px;
-  opacity: .5
-}
-
-#fancybox-thumbs ul li.active {
-  opacity: .75;
-  padding: 0;
-  border: 1px solid #fff
-}
-
-#fancybox-thumbs ul li:hover {
-  opacity: 1
-}
-
-#fancybox-thumbs ul li a {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  border: 1px solid #222;
-  background: #111;
-  outline: 0
-}
-
-#fancybox-thumbs ul li img {
-  display: block;
-  position: relative;
-  border: 0;
-  padding: 0;
-  max-width: none;
-}
 
 /* MAIN CSS FROM PHP STYLES */
 
@@ -666,7 +148,14 @@ h6 {
 }
 
 p {
-  margin: 0 0 20px 0;
+  margin-bottom: 10px;
+  @include tablet () {
+    margin-bottom: 15px;
+  }
+  @include laptop () {
+    margin-bottom: 20px;
+  }
+
 }
 
 p img {
@@ -1136,7 +625,7 @@ body {
   margin: 0 auto;
   max-width: 940px;
   position: relative;
-  
+
   @include tablet() {
     padding: 0 20px;
   }
@@ -1252,11 +741,13 @@ body {
 }
 
 .actions li {
-  max-width: 170px;
   width: 48%;
-  
+  text-align: center;
+  margin-bottom: 20px;
+
   @include tablet() {
     width: 170px;
+    margin-bottom: 0;
   }
 }
 
@@ -1378,14 +869,6 @@ body {
   }
   .content {
     width: auto;
-  }
-  .actions {
-    width: auto;
-    height: auto;
-  }
-  .actions li, .actions li:last-child {
-    float: none;
-    margin: 0 auto;
   }
   .main-footer {
     display: none;
@@ -1695,7 +1178,7 @@ img.review-avatar {
       opacity: 0.6;
       transition: opacity 0.5s ease;
     }
-    
+
     &:hover:after {
       opacity: 1;
     }
@@ -2359,7 +1842,7 @@ main {
   background: white;
   padding-top: $contentPadding;
   padding-bottom: $contentPadding;
-  
+
   &.no-pb {
     padding-bottom: 0;
   }
@@ -2388,7 +1871,7 @@ ul {
   li {
     line-height: 18px;
     margin-bottom: 12px;
-    
+
     &:last-child {
       margin-bottom: 0;
     }
